--- a/app/views/weathers/_form.html.erb
+++ b/app/views/weathers/_form.html.erb
@@ -44,6 +44,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit class:"button is-success" %>
+    <%= form.submit class:"button btn-orange" %>
   </div>
 <% end %>
