Add more changes

--- a/app/views/employees/_form.html.erb
+++ b/app/views/employees/_form.html.erb
@@ -46,6 +46,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit class:"button is-link" %>
+    <%= form.submit class:"button btn-orange" %>
   </div>
 <% end %>
