--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'New Employee', new_employee_path, class:"button is-success my-3" %>
+<%= link_to 'New Employee', new_employee_path, class:"button btn-orange my-3" %>
 <div class='box outerdiv'>
-  <h1 class="has-background-white">Employees</h1>
+  <h1 class="has-text-centered"><strong>Employees</strong></h1>
 
 <table class="table">
   <thead>
