--- a/app/views/employees/new.html.erb
+++ b/app/views/employees/new.html.erb
@@ -1,7 +1,7 @@
-<div class="columns">
-  <div class="column">
-    <div class="box">
-      <h1>New Employee</h1>
+<div class="columns is-centered">
+  <div class="column is-6">
+    <div class="box outerdiv">
+      <h1 class="has-text-centered"><strong>New Employee</strong></h1>
       <%= render 'form', employee: @employee %>
       <%= link_to 'Back', employees_path, class:'button is-dark' %>
     </div>
