Add more changes

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,6 +14,7 @@
           <li><%= link_to 'Purchases & Payments', purchases_path, class:"has-text-white" %></li>
           <li><%= link_to 'Rentals', rentals_path, class:"has-text-white" %></li>
           <li><%= link_to 'Wages & Salaries', wages_path, class:"has-text-white" %></li>
+          <li><%= link_to 'Seasonal Inputs Usage To Date', seasonal_inputs_usage_to_date_index_path, class:"has-text-white" %></li>
         </ul>
       </div>
     </div>
