--- a/app/views/deduction_tables/new.html.erb
+++ b/app/views/deduction_tables/new.html.erb
@@ -83,7 +83,8 @@
             <div class="field">
               <%= form.label :farm_name, class:"label" %>
               <div class="control">
-                <%= form.text_field :farm_name, class:"input" %>
+                <%= current_user.farm_name %>
+                <%= form.text_field :farm_name, value: current_user.farm_name, type: :hidden %>
               </div>
             </div>
           </div>
@@ -296,6 +297,7 @@
         </div>
 
           <%= form.text_field :total_amount, value: 0, type: :hidden %>
+          <%= form.text_field :company_name, value: current_user.company_name, type: :hidden %>
           <div class="actions has-text-centered my-3">
             <%= form.submit 'Create New Deduction', class:"button is-success" %>
           </div>
