--- a/app/views/stores/edit.html.erb
+++ b/app/views/stores/edit.html.erb
@@ -15,7 +15,7 @@
 
     <div class="field">
       <div class="control">
-        <%= form.select :company_name, [current_user.Company_Name],type: :hidden %>
+        <%= form.select :company_name, [current_user.company_name],type: :hidden %>
       </div>
     </div>
 
