--- a/app/views/cereal_stores/_form.html.erb
+++ b/app/views/cereal_stores/_form.html.erb
@@ -11,9 +11,8 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :company_name, class:"label" %>
     <div class="control"></div>
-    <%= form.select :company_name, [current_user.company_name], class:"my-3" %>
+    <%= form.text_field :company_name, value:current_user.company_name, type: :hidden %>
   </div>
 
   <div class="field">
@@ -28,9 +27,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :farm_name, class:"label" %>
     <div class="control">
-      <%= form.text_field :farm_name, class:"input" %>
+      <%= form.text_field :farm_name, value:current_user.farm_name, type: :hidden %>
     </div>
   </div>
 
