--- a/app/views/field_days/_form.html.erb
+++ b/app/views/field_days/_form.html.erb
@@ -12,8 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :company_name, class:"label" %>
-    <%= form.select :company_name, [current_user.company_name], class:"my-3" %>
+    <%= form.text_field :company_name, value:current_user.company_name, type: :hidden %>
   </div>
 
   <div class="field">
