Add more changes

--- a/app/views/seasonal_inputs_usage_to_date/index.html.erb
+++ b/app/views/seasonal_inputs_usage_to_date/index.html.erb
@@ -47,4 +47,12 @@
       <td><%= quantity_used(fuel)%></td>
     </tr>
   <% end %>
+
+  <tr>
+      <td>Payee</td>
+      <td><%= @payee %></td>
+      <td>nil</td>
+      <td>$</td>
+      <td>nil</td>
+    </tr>
 </table>
