--- a/app/views/wages/new.html.erb
+++ b/app/views/wages/new.html.erb
@@ -60,8 +60,8 @@
               Net
             </div>
             <div class="my-1 has-text-centered">
-              $<%= (Timebook.monthly_total_rate(deduction.employee_name)- deduction.total_amount) %>
-              <%= form.text_field :employee_number, value: (Timebook.monthly_total_rate(deduction.employee_name) - deduction.total_amount), type: :hidden %>
+              $<%= (montly_rate(deduction.employee_name)- deduction.total_amount) %>
+              <%= form.text_field :employee_number, value: (montly_rate(deduction.employee_name) - deduction.total_amount), type: :hidden %>
             </div>
           </div>
         </div>
