--- a/app/views/seasonal_inputs_usage_to_date/index.html.erb
+++ b/app/views/seasonal_inputs_usage_to_date/index.html.erb
@@ -1,5 +1,4 @@
 <h1 class='has-background-white'>SeasonalInputsUsageToDate#index</h1>
-<p>Find me in app/views/seasonal_inputs_usage_to_date/index.html.erb</p>
 <table class="table">
   <tr>
     <th>Description</th>
@@ -49,10 +48,26 @@
   <% end %>
 
   <tr>
-      <td>Payee</td>
-      <td><%= @payee %></td>
-      <td>nil</td>
-      <td>$</td>
-      <td>nil</td>
-    </tr>
+    <td>Payee</td>
+    <td><%= @payee %></td>
+    <td>nil</td>
+    <td>$</td>
+    <td>nil</td>
+  </tr>
+
+  <tr>
+    <td>NEC</td>
+    <td><%= @nec %></td>
+    <td>nil</td>
+    <td>$</td>
+    <td>nil</td>
+  </tr>
+
+  <tr>
+    <td>NSSA</td>
+    <td><%= @nssa %></td>
+    <td>nil</td>
+    <td>$</td>
+    <td>nil</td>
+  </tr>
 </table>
