--- a/app/views/calenders/_form.html.erb
+++ b/app/views/calenders/_form.html.erb
@@ -30,16 +30,16 @@
   </div>
 
   <div class="field">
-    <%= form.label :month, class:"label"  %>
+    <%= form.label :month, class:"labels"  %>
     <div class="control">
-      <%= form.text_field :month, class:"input" %>
+      <%= form.text_field :month, class:"inputs" %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :activity, class:"label"  %>
+    <%= form.label :activity, class:"labels"  %>
     <div class="control">
-      <%= form.text_field :activity, class:"input" %>
+      <%= form.text_field :activity, class:"inputs" %>
     </div>
   </div>
 
@@ -48,9 +48,9 @@
   </div>
 
   <div class="field">
-    <%= form.label :date, class:"label"  %>
+    <%= form.label :date, class:"labels"  %>
     <div class="control">
-      <%= form.date_select :date, class:"input" %>
+      <%= form.date_select :date, class:"inputs" %>
     </div>
   </div>
 
