--- a/app/views/harvestings/index.html.erb
+++ b/app/views/harvestings/index.html.erb
@@ -3,7 +3,7 @@
 <div class='box outerdiv'>
 <h1 class="has-background-white">Harvestings</h1>
 
-<table class="table">
+<table class="tables">
   <thead>
     <tr>
       <th>Company name</th>
