--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -207,6 +207,66 @@ form {
 
 // #######******TABLE STYLES END*******########
 
+// #########********HOMEPAGE DESIGN*******##########
+
+.page-container {
+  display: block;
+  max-width: 40vh;
+
+  .rows {
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+
+    .row1 {
+      grid-row: 1 / span 1;
+    }
+
+    .row2 {
+      grid-row: 2 / span 1;
+    }
+
+    .row3 {
+      grid-row: 3 / span 1;
+    }
+
+    .row4 {
+      grid-row: 4 / span 1;
+    }
+
+    .row5 {
+      grid-row: 5 / span 1;
+    }
+
+    .row6 {
+      grid-row: 6 / span 1;
+    }
+
+    .row7 {
+      grid-row: 7 / span 1;
+    }
+
+    .row8 {
+      grid-row: 8 / span 1;
+    }
+
+    .row9 {
+      grid-row: 9 / span 1;
+    }
+
+    .row10 {
+      grid-row: 10 / span 1;
+    }
+
+    .row11 {
+      grid-row: 11 / span 1;
+    }
+
+    .row12 {
+      grid-row: 12 / span 1;
+    }
+  }
+}
+
 $fa-font-path: '@fortawesome/fontawesome-free/webfonts';
 @import '@fortawesome/fontawesome-free/scss/fontawesome';
 @import '@fortawesome/fontawesome-free/scss/solid';
