Add some styles for side bar

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
     <div class="column is-3">
       <div class="orange box-height">
         <div class="dark">
-          <span><i class="far fa-money-bill-alt"></i> ACCOUNTING</span>
+          accc
         </div>
         <ul class="has-text-white has-text-centered">
           <li><%= link_to 'Cash Requests', cash_requisitions_path, class:"has-text-white" %></li>
@@ -55,7 +55,7 @@
     <div class="column is-3">
       <div class="orange box-height">
         <div class="dark">
-          <span>WAREHOUSING</span>
+          warehousing
         </div>
         <ul class="has-text-white has-text-centered">
           <li><%= link_to 'Cereal Stores', cereal_stores_path, class:"has-text-white" %></li>
