--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -120,16 +120,6 @@ body {
   color: #ffffff;
 }
 
-// tr {
-//   th {
-//     background-color: gray;
-//   }
-//   &:hover {
-//     background-color: rgb(177, 168, 168);
-//     color: white;
-//   }
-// }
-
 .blink {
   font-size: 19px;
   font-weight: 900;
@@ -208,61 +198,145 @@ form {
 // #######******TABLE STYLES END*******########
 
 // #########********HOMEPAGE DESIGN*******##########
-
 .page-container {
-  display: block;
-  max-width: 40vh;
+  max-width: 100vw;
+  height: fit-content;
+  display: flex;
+  background-color: rgb(145, 16, 102);
 
-  .rows {
-    display: grid;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  .content-container {
+    background-color: rgb(77, 39, 112);
+  }
 
-    .row1 {
-      grid-row: 1 / span 1;
+  input[type="radio"] {
+    display: none;
+  }
+
+  #control1:checked ~ .content-container {
+    width: 75vw;
+  }
+
+  #control2:checked ~ .content-container {
+    width: 93vw;
+  }
+
+  #control1:checked ~ .page-navigation {
+    width: 25vw;
+
+    .rows {
+      padding: 2rem 3rem 5rem 0;
+      margin: 0 5rem 0 0.5rem;
+
+      div > label[for="control1"] {
+        display: none;
+      }
     }
 
-    .row2 {
-      grid-row: 2 / span 1;
+    .rows > div {
+      border-bottom: 2px solid gray;
+    }
+  }
+
+  #control2:checked ~ .page-navigation {
+    width: 7vw;
+
+    .rows > div > span > span {
+      display: none;
     }
 
-    .row3 {
-      grid-row: 3 / span 1;
+    .rows {
+      div > label[for="control2"] {
+        display: none;
+      }
     }
+  }
 
-    .row4 {
-      grid-row: 4 / span 1;
-    }
+  .page-navigation {
+    display: block;
+    background-color: rgb(145, 16, 102);
+    color: white;
+    max-height: 100vh;
+  
+    .rows {
+      margin: auto 0 auto 1rem;
+      width: 100%;
+      height: 100%;
+      display: grid;
+      grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 
-    .row5 {
-      grid-row: 5 / span 1;
-    }
+      div > span {
+        display: flex;
+        justify-content: space-between;
+      }
+  
+      .row1 {
+        width: calc(100% - 1rem);
+        grid-row: 1 / span 1;
+      }
+  
+      .row2 {
+        width: calc(100% - 1rem);
+        grid-row: 2 / span 1;
+      }
+  
+      .row3 {
+        width: calc(100% - 1rem);
+        grid-row: 3 / span 1;
+      }
+  
+      .row4 {
+        width: calc(100% - 1rem);
+        grid-row: 4 / span 1;
+      }
+  
+      .row5 {
+        width: calc(100% - 1rem);
+        grid-row: 5 / span 1;
+      }
+  
+      .row6 {
+        width: calc(100% - 1rem);
+        grid-row: 6 / span 1;
+      }
+  
+      .row7 {
+        width: calc(100% - 1rem);
+        grid-row: 7 / span 1;
+      }
+  
+      .row8 {
+        width: calc(100% - 1rem);
+        grid-row: 8 / span 1;
+      }
+  
+      .row9 {
+        width: calc(100% - 1rem);
+        grid-row: 9 / span 1;
+      }
+  
+      .row10 {
+        width: calc(100% - 1rem);
+        grid-row: 10 / span 1;
+      }
+  
+      .row11 {
+        width: calc(100% - 1rem);
+        grid-row: 11 / span 1;
+      }
+  
+      .row12 {
+        grid-row: 12 / span 1;
+        width: calc(100% - 1rem);
+        height: fit-content;
+        display: flex;
+        padding: 0;
+        margin: 0;
+        justify-content: right;
 
-    .row6 {
-      grid-row: 6 / span 1;
-    }
-
-    .row7 {
-      grid-row: 7 / span 1;
-    }
-
-    .row8 {
-      grid-row: 8 / span 1;
-    }
-
-    .row9 {
-      grid-row: 9 / span 1;
-    }
-
-    .row10 {
-      grid-row: 10 / span 1;
-    }
-
-    .row11 {
-      grid-row: 11 / span 1;
-    }
-
-    .row12 {
-      grid-row: 12 / span 1;
+        label {
+          padding: 0;
+        }
+      }
     }
   }
 }
