--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,39 +4,46 @@
     <nav class="navbar is-light" role="navigation" aria-label="main navigation">
       <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
-          <%# <a class="navbar-item">
-            Home
-          </a> %>
-          <%= link_to "Home", home_index_path, class:"navbar-item"%>
-
           <a class="navbar-item">
-            Documentation
+            MKT-FARM_SYSTEMS
           </a>
 
           <div class="navbar-item has-dropdown is-hoverable">
-            <a class="navbar-link">
-              More
-            </a>
+            <% if admin_users %>
+              <a class="navbar-link">
+                Admin Activities
+              </a>
 
-            <div class="navbar-dropdown has-background-dark">
-              <%= link_to "Client Payments", client_payments_path, class:"navbar-item has-text-white" %>
-              <%= link_to "Mkt Payments", mkt_payments_path, class:"navbar-item has-text-white" %>
-              <a class="navbar-item">
-                Contact
-              </a>
-              <hr class="navbar-divider">
-              <a class="navbar-item">
-                Report an issue
-              </a>
-            </div>
+              <div class="navbar-dropdown has-background-dark">
+                <%= link_to "Client Payments", client_payments_path, class:"navbar-item has-text-white" %>
+                <%= link_to "Mkt Payments", mkt_payments_path, class:"navbar-item has-text-white" %>
+                <a class="navbar-item">
+                  Contact
+                </a>
+                <hr class="navbar-divider">
+                <a class="navbar-item">
+                  Report an issue
+                </a>
+              </div>
+            <% end %>
           </div>
+
+          <p class="navbar-item blink">
+            <%= pass_greeting_to_users %>
+          </p>
+
+          <p class="navbar-item">
+            <%= current_date %>
+          </p>
         </div>
 
         <% if user_signed_in? %>
           <div class="navbar-end">
             <div class="navbar-item">
               <div class="buttons">
+              <% if admin_users %>
                 <%= link_to 'Users', users_path, class:"button is-light" %>
+              <% end %>
                 <%= link_to 'Edit Account', edit_user_registration_path, class:"button is-light" %>
                   <%= link_to destroy_user_session_path, method: :delete, class:"has-text-dark button is-light" do %>
                     <span><i class="fas fa-sign-out-alt fa-2x"></i></span> 
@@ -56,25 +63,5 @@
         <% end %>
       </div>
     </nav>
-
-  </div>
-
-  <!-- Hero content: will be in the middle -->
-  <div class="hero-body">
-    <div class="container has-text-centered">
-        <p>
-
-        <% if user_signed_in? %>
-        <span class="blink">
-          <%= greeting_text %>
-        </span>
-        <% else %>
-          <span>Guest User</span>
-        <% end %>
-        </p>
-      <p class="subtitle">
-        <%= current_date %>
-      </p>
-    </div>
   </div>
 </section>
