--- a/app/views/layouts/_homepage.html.erb
+++ b/app/views/layouts/_homepage.html.erb
@@ -1,16 +1,70 @@
-<div class="page-container">
-  <div class="rows">
-    <div class="row1">1</div>
-    <div class="row2">2</div>
-    <div class="row3">3</div>
-    <div class="row4">4</div>
-    <div class="row5">5</div>
-    <div class="row6">6</div>
-    <div class="row7">7</div>
-    <div class="row8">8</div>
-    <div class="row9">9<i class='fas fa-angle-double-left fa-2x'></i></div>
-    <div class="row10">10</div>
-    <div class="row11">11</div>
-    <div class="row12">12</div>
+<div class="page-navigation">
+              <div class="rows">
+                <div class="row1">
+                <span>
+                    <i class="fas fa-cog fa-3x"></i> <span>User Account</span>
+                  </span>
+                </div>
+                <div class="row2">
+                  <span>
+                    <i class="far fa-money-bill-alt fa-3x"></i> <span>ACCOUNTING</span>
+                  </span>
+                </div>
+                <div class="row3">
+                  <span>
+                    <i class="fas fa-warehouse fa-3x"></i> <span>WAREHOUSING</span>
+                  </span>
+                </div>
+                <div class="row4">
+                  <span>
+                    <i class="fab fa-pagelines fa-3x"></i> <span>LAND(S)</span>
+                  </span>
+                </div>
+                <div class="row5">
+                  <span>
+                    <i class="fas fa-hiking fa-3x"></i> <span>DAILY ACTIVITIES</span>
+                  </span>
+                </div>
+                <div class="row6">
+                  <span>
+                    <i class="fas fa-funnel-dollar fa-3x"></i> <span>CROP SALES</span>
+                  </span>
+                </div>
+                <div class="row7">
+                  <span>
+                    <i class="fab fa-adversal fa-3x"></i> <span>Advertisements</span>
+                  </span>
+                </div>
+                <div class="row8">
+                  <span>
+                    <i class="fas fa-seedling fa-3x"></i> <span>SEEDBEB PLANTING</span>
+                  </span>
+                </div>
+                <div class="row9">
+                  <span>
+                    <i class="fas fa-laptop-house fa-3x"></i> <span>Properties</span>
+                  </span>
+                </div>
+                <div class="row10">
+                  <span>
+                    <i class="fas fa-layer-group fa-3x"></i> <span>LIVESTOCK AND HORTICULTURE</span>
+                  </span>
+                </div>
+                <div class="row11">
+                  <span>
+                    <i class="fas fa-cogs fa-3x"></i> <span>OTHERS</span>
+                  </span>
+                </div>
+                <div class="row12">
+                  <div class="section">
+                    <label for="control1">
+                      <i class='fas fa-angle-double-right fa-3x'></i>
+                    </label>
+
+        <label for="control2">
+          <i class='fas fa-angle-double-left fa-3x'></i>
+        </label>
+      </div>
+    </div>
   </div>
 </div>
