--- a/app/views/layouts/_homepage.html.erb
+++ b/app/views/layouts/_homepage.html.erb
@@ -47,7 +47,7 @@
     </div>
     <div class="row10">
       <span>
-        <i class="fas fa-layer-group fa-3x"></i> <span>LIVESTOCK AND HORTICULTURE</span>
+        <i class="fas fa-layer-group fa-3x"></i> <span>LIVESTOCK & HORTICULTURE</span>
       </span>
     </div>
     <div class="row11">
